--- a/src/components/alg/alg-conspect/sp/pages/elem-sp12.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp12.html
@@ -16,7 +16,7 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p1">Структуры данных</a>
+    <a href="#p1">Структуры данных #1. stack, queue, deque</a>
   </p>
   <p>
     <a href="#task1">Задача A. Последовательность</a>
@@ -44,11 +44,124 @@
 </article>
 
 
-<!-- Теория чисел -->
+<!-- Структуры данных #1. stack, queue, deque -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Теория чисел</h3>
+  <h3>Структуры данных #1. stack, queue, deque</h3>
 
+  <p><strong>Структура данных</strong> — это контейнер, который хранит данные в определенном макете/конструкции. Этот «макет/конструкция» позволяет структуре данных быть эффективной в некоторых операциях и неэффективной в других.</p>
+  <p>Примеры из жизни: шкаф, ящик с инструментами, кладовка.</p>
+  <p>Новые библиотеки:</p>
+  <code>#include &lt;stack&gt;</code>
+  <code>#include &lt;queue&gt;</code>
+  <code>#include &lt;deque&gt;</code>
+
+  <p><strong>Линейные</strong> структуры данных в области памяти идут друг за дружкой. Например: массивы, матрицы, deque ...</p>
+
+  <p><strong>Нелинейные</strong> это деревовидные структуры данных и хеш-таблицы.</p>
+
+  <p>Примеры структуры данных:</p>
+  <ol>
+    <li>Массивы</li>
+    <li>Матрицы</li>
+    <li>Связанные списки (не используется в <strong>спортпроге</strong>)</li>
+    <li>stack</li>
+    <li>queue</li>
+    <li>set</li>
+    <li>map</li>
+    <li>Графы</li>
+    <li>Деревья</li>
+    <li>Хэш таблицы</li>
+  </ol>
+
+  <h4>Pair</h4>
+  <p><strong>Pair</strong> это контейнер, который объединяет два элемента одного или разных типов данных. Он состоит из двух элементов: первого и второго (порядок должен быть фиксированным).</p>
+  <p>Обращение к pair:</p>
+<pre>
+pair&lt;int, string&gt; my_p;
+my_p.first = 10;
+my_p.second = "123";
+</pre>
+
+  <p><strong>Pair</strong> может заменить классы/структуры при решении задач на олимпиадах:</p>
+<pre>
+pair&lt;pair&lt;int, string&gt;, pair&lt;int, int&gt; &gt; monster;
+
+monster.first.second = "abcd";
+monster.first.first = 10;
+monster.second.first = 15;
+</pre>
+
+  <p><strong>Pair</strong> очень популярная в <strong>спортпроге</strong> потому что позволяет не использовать настоящую структуру. Работа с pair это ускорение написания кода.</p>
+  <p>Мы можем сортировать структуры данных с <strong>pair</strong>. Например vector .</p>
+<pre>
+vector&lt;pair&lt;int, int&gt; &gt; A(n);
+for (int i = 0; i &lt; n; i++) {
+  cin >> A[i].first >> A[i].second;
+}
+sort(A.begin(), A.end());
+</pre>
+
+  <h4>Stack</h4>
+  <p><strong>Stack</strong> - структура данных, которая работает по принципу LIFO (last-in first-out или ”последний вошел — первым вышел”) — первым всегда извлекается последний добавленный элемент.</p>
+
+  <p>Примеры: стопка книжек, стопка карт, подносы в столовой.</p>
+
+  <p>Объявление stack:</p>
+  <code>stack&lt;тип данных&gt; имя;</code>
+
+  <ol>
+    <li>.empty() Проверяет, является ли stack пустым. true/false</li>
+    <li>.pop() Удаляет элемент из верхней части stack.</li>
+    <li>.push(a) Добавляет элемент в верхнюю часть stack.</li>
+    <li>.size() Возвращает количество элементов в контейнере stack.</li>
+    <li>.top() Возвращает ссылку на элемент в верхней части stack.</li>
+  </ol>
+
+  <h4>Queue</h4>
+  <p><strong>Queue</strong> - контейнер, который работает по принципу FIFO (first-in first-out или ”первый вошел — первым вышел”) — первым всегда извлекается первый добавленный элемент. То есть это контейнер, аналогичный стандартной очереди, которая часто встречается в нашей повседневной жизни.</p>
+  <p>Самый яркий пример честной очереди это очередь в поликлинику ранним утром.</p>
+
+  <ol>
+    <li>.back() Возвращает ссылку на последний элемент в queue.</li>
+    <li>.empty() Проверяет, является ли queue пустым. true/false</li>
+    <li>.front() Возвращает ссылку на первый элемент в начале queue.</li>
+    <li>.pop() Удаляет элемент из начала queue.</li>
+    <li>.push(a) Добавляет элемент в конец queue.</li>
+    <li>.size() Возвращает количество элементов в контейнере queue.</li>
+  </ol>
+
+  <h4>Deque</h4>
+  <p><strong>Deque</strong> представляет двухстороннюю очередь, ее еще называют двухглавой змеей.  Мы можем так же обращаться по элементам при помощи операторов []. На deque реализована такая структура данных как vector.</p>
+  <p>Пример: котопес.</p>
+
+  <ol>
+    <li>.empty() Проверяет, является ли deque пустым. true/false</li>
+    <li>.size() Возвращает количество элементов в контейнере deque.</li>
+    <li>.pop_back() Удаляет элемент в конце deque.</li>
+    <li>.pop_front() Удаляет элемент в начале deque.</li>
+    <li>.push_back(a) Добавляет элемент в конец deque.</li>
+    <li>.push_front(a) Добавляет элемент в начало deque.</li>
+    <li>.front() Возвращает ссылку на первый элемент в deque.</li>
+    <li>.back() Возвращает ссылку на последний элемент в deque.</li>
+    <li>.begin() Возвращает итератор, указывающий на первый элемент.</li>
+    <li>.end() Возвращает итератор, указывающий за последним элементом.</li>
+    <li>.rbegin() Возвращает итератор, указывающий на последний элементом.</li>
+    <li>.rend() Возвращает итератор, указывающий перед первым элементом.</li>
+  </ol>
+<pre>
+deque&lt;int&gt; deq;
+int tmp n;
+cin >> n;
+for (int i = 0; i &lt; n; i++) {
+  cin >> tmp;
+  deq.push_back(tmp);
+}
+sort(deq.begin(), deq.end());
+for (int i = 0; i &lt; n; i++) {
+  cout &lt;&lt; deq[i] &lt;&lt; " ";
+}
+</pre>
 </article>
 
 
@@ -104,6 +217,46 @@
   <code>((([)]))</code>
   <code>No</code>
 
+  <details>
+    <summary>Решение</summary>
+    <p>Эта задача решается только через стек. Перебираем в цикле символы входной строки со скобками. Если стек пустой, то кладем символ в стек. Иначе проверяем, если символ - закрывающая скобка, а в стеке такая же открывающая, то удаляем последний символ из стека. Иначе кладем символ в стек.</p>
+    <p>Когда цикл закончится, проверяем стек. Если он пуст, то на входе была правильная скобочная последовательность, иначе - неправильная</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;stack&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  string s;
+  cin >> s;
+
+  // решение
+  stack&lt;char&gt; st;
+  for (int i = 0; i &lt; s.size(); i++) {
+    if (st.size() == 0) {
+      st.push(s[i]);
+    } else {
+      if (s[i] == ')' && st.top() == '(') {
+        st.pop();
+      } else if (s[i] == ']' && st.top() == '[') {
+        st.pop();
+      } else {
+        st.push(s[i]);
+      }
+    }
+  }
+
+  // вывод результата
+  if (st.empty() == true) {
+    cout &lt;&lt; "Yes";
+  } else {
+    cout &lt;&lt; "No";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -369,9 +522,9 @@ QUEUE IS EMPTY
   <p>Про каждого из участников вы знаете его силу игры в теннис, и у всех игроков они различны. В партии всегда побеждает игрок с большей силой. Определите, кто станет победителем.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке находятся два числа, разделённые пробелом: n и k (2 ≤ n ≤ 500, 2 ≤ k ≤ 10<sup>12</sup>) — количество людей и количество побед подряд, после которого игрок становится победителем, соответственно.</p>
+  <p>В первой строке находятся два числа, разделённые пробелом: n и k (2 ≤ n ≤ 500, 2 ≤ k ≤ 10¹²) — количество людей и количество побед подряд, после которого игрок становится победителем, соответственно.</p>
 
-  <p>В следующей строке содержится n целых чисел a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n</sub> (1 ≤ a<sub>i</sub> ≤ n), выражающих силу игроков. Гарантируется, что эта строка содержит перестановку, то есть все a<sub>i</sub> различны.</p>
+  <p>В следующей строке содержится n целых чисел a₁, a₂, ..., aₙ (1 ≤ aᵢ ≤ n), выражающих силу игроков. Гарантируется, что эта строка содержит перестановку, то есть все aᵢ различны.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно число — силу победителя.</p>
@@ -404,6 +557,13 @@ QUEUE IS EMPTY
 2 1
 </pre>
   <code>2</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+
+</pre>
+  </details>
 </article>
 
 
