--- a/src/components/alg/alg-conspect/sp/pages/elem-sp13.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp13.html
@@ -759,5 +759,38 @@ NO
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Студент Валера учится на первом курсе университета. Скоро у него сессия, и ему предстоит сдать ровно n экзаменов. Валера — умный парень, поэтому он сможет сдать любой экзамен с первого раза. Кроме того, он может сдавать несколько экзаменов в один день и в любом порядке.</p>
+
+  <p>Согласно расписанию, экзамен по i-му предмету нужно сдать в день с номером aᵢ. Однако Валера договорился с каждым преподавателем, и преподаватель i-го предмета разрешил организовать досрочную сдачу своего экзамена в день bᵢ (bᵢ &lt; aᵢ). Таким образом, Валера может сдать экзамен по i-му предмету либо в день aᵢ, либо в день bᵢ. Все преподаватели ставят запись о сдаче экзамена в зачетную книжку в день фактической сдачи экзамена и датируют эту запись числом aᵢ.</p>
+
+  <p>Валера считает, что будет достаточно странно, если записи в зачетной книжке будут идти не в порядке неубывания даты. Поэтому Валера просит вас помочь ему. Найдите минимально возможный номер дня, когда Валера сможет сдать последний экзамен, если он будет сдавать экзамены так, чтобы все записи в его зачетной книжке шли в порядке неубывания даты.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке записано единственное целое положительное число n (1 ≤ n ≤ 5000) — количество экзаменов, которые будет сдавать Валера.</p>
+
+  <p>В каждой из следующих n строк записано по два целых положительных числа через пробел aᵢ и bᵢ (1 ≤ bᵢ &lt; aᵢ ≤ 10⁹) — дата сдачи по расписанию и досрочная дата сдачи i-го экзамена соответственно.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите единственное целое число — минимально возможный номер дня, когда Валера сможет сдать последний экзамен, если он будет сдавать экзамены так, чтобы все записи в его зачетной книжке шли в порядке неубывания даты.</p>
+
+  <h4>Пример 1</h4>
+<pre>
+3
+5 2
+3 1
+4 2
+</pre>
+  <code>2</code>
+  <p>В первом примере Валера сначала сдаст экзамен по второму предмету в первый день (в зачетную книжку заносится дата сдачи по расписанию, то есть 3). На следующий день сначала он сдаст экзамен по третьему предмету (будет добавлена запись, датированная днем 4), а после него в тот же день сдаст экзамен по первому предмету (в зачетную книжку отметка будет проставлена с днем 5). Таким образом, последний экзамен Валера сдаст во второй день, и даты в зачетной книжке будут идти в порядке неубывания: 3, 4, 5.</p>
+
+  <h4>Пример 2</h4>
+<pre>
+3
+6 1
+5 2
+4 3
+</pre>
+  <code>6</code>
+  <p>Во втором примере Валера сначала сдаст экзамен по третьему предмету в четвертый день, после него экзамен по второму предмету в пятый день. После этого в шестой день Валера сдаст экзамен по первому предмету.</p>
 </article>
 
