--- a/src/components/code/code-ref/pages/elem-unicode.html
+++ b/src/components/code/code-ref/pages/elem-unicode.html
@@ -1,22 +1,18 @@
-<h1>Unicode</h1>
-
-<!-- Заголовок -->
 <div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
+  <h1>Unicode</h1>
 </div>
+
 
 <!-- Содержание -->
 <div class="article article__content">
+  <h2>Содержание</h2>
 
   <div>
     <p><a href="#links">links</a></p>
-    <p><a href="#about">about</a></p>
-    <p><a href="#sur">Суррогатная пара</a></p>
-    <p><a href="#utf">UTF-8, UTF-16, UTF-32</a></p>
-    <p><a href="#need">Нужные unicode символы</a></p>
     <p><a href="#sup">Надстрочные символы (superscript)</a></p>
     <p><a href="#sub">Подстрочные символы (subscript)</a></p>
+    <p><a href="#need">Нужные unicode символы</a></p>
+    <p><a href="#about">about</a></p>
   </div>
 
 </div>
@@ -31,44 +27,173 @@
 </article>
 
 
-<!-- about -->
+<!-- Надстрочные символы (superscript) -->
 <article class="article">
-  <div class="anchor" id="about"></div>
-  <h2>about</h2>
-  <p>Стандарт Юникод был предложен в 1991 году. Сейчас он использует кодировку UTF-16, где кодируется 2<sup>16</sup> символов со значениями кодов от 0 до 65535. Это базовая многоязычная плоскость (BMP - base multilanguage plane).</p>
-  <p>Стандарт Юникода установил 16 дополнительных "плоскостей" символов, каждый из которых имеет тот же размер, что и BMP. Это дает Юникоду возможность определить 1,114,112 символов (т. е. 2<sup>16</sup> * 17 символов) в диапазоне кодовых точек от U+0000 до U+10FFFF. Большинству кодовых точек за пределами BMP еще не назначены символы.</p>
+  <div class="anchor" id="sup"></div>
+  <h2>Надстрочные символы (superscript)</h2>
+
+  <p>
+    Нажмите на символ чтобы скопировать его в буфер обмена
+  </p>
+  <p>
+    <div class="copy-to-clipboard">&#x2070;</div>
+    <div class="copy-to-clipboard">&#xB9;</div>
+    <div class="copy-to-clipboard">&#xB2;</div>
+    <div class="copy-to-clipboard">&#xB3;</div>
+    <div class="copy-to-clipboard">&#x2074;</div>
+    <div class="copy-to-clipboard">&#x2075;</div>
+    <div class="copy-to-clipboard">&#x2076;</div>
+    <div class="copy-to-clipboard">&#x2077;</div>
+    <div class="copy-to-clipboard">&#x2078;</div>
+    <div class="copy-to-clipboard">&#x2079;</div>
+    <div class="copy-to-clipboard">&#x1D43;</div>
+    <div class="copy-to-clipboard">&#x1D47;</div>
+    <div class="copy-to-clipboard">&#x1D9C;</div>
+    <div class="copy-to-clipboard">&#x1D48;</div>
+    <div class="copy-to-clipboard">&#x1D49;</div>
+    <div class="copy-to-clipboard">&#x1DA0;</div>
+    <div class="copy-to-clipboard">&#x1D4D;</div>
+    <div class="copy-to-clipboard">&#x02B0;</div>
+    <div class="copy-to-clipboard">&#x2071;</div>
+    <div class="copy-to-clipboard">&#x02B2;</div>
+    <div class="copy-to-clipboard">&#x1D4F;</div>
+    <div class="copy-to-clipboard">&#x02E1;</div>
+    <div class="copy-to-clipboard">&#x207F;</div>
+    <div class="copy-to-clipboard">&#x1D52;</div>
+    <div class="copy-to-clipboard">&#x1D56;</div>
+    <div class="copy-to-clipboard">&#x02B3;</div>
+    <div class="copy-to-clipboard">&#x02E2;</div>
+    <div class="copy-to-clipboard">&#x1D57;</div>
+    <div class="copy-to-clipboard">&#x1D58;</div>
+    <div class="copy-to-clipboard">&#x1D5B;</div>
+    <div class="copy-to-clipboard">&#x02B7;</div>
+    <div class="copy-to-clipboard">&#x02E3;</div>
+    <div class="copy-to-clipboard">&#x02B8;</div>
+    <div class="copy-to-clipboard">&#x1DBB;</div>
+    <div class="copy-to-clipboard">&#x207A;</div>
+    <div class="copy-to-clipboard">&#x207B;</div>
+    <div class="copy-to-clipboard">&#x207C;</div>
+    <div class="copy-to-clipboard">&#x207D;</div>
+    <div class="copy-to-clipboard">&#x207E;</div>
+  </p>
+
+  <details>
+    <summary>Надстрочные символы (superscript)</summary>
+<pre>&#x2070;  &#9; &amp;#x2070;  &#9; Superscript Zero</pre>
+<pre>&#xB9;    &#9; &amp;#xB9;    &#9; Superscript One</pre>
+<pre>&#xB2;    &#9; &amp;#xB2;    &#9; Superscript Two</pre>
+<pre>&#xB3;    &#9; &amp;#xB3;    &#9; Superscript Three</pre>
+<pre>&#x2074;  &#9; &amp;#x2074;  &#9; Superscript Four</pre>
+<pre>&#x2075;  &#9; &amp;#x2075;  &#9; Superscript Five</pre>
+<pre>&#x2076;  &#9; &amp;#x2076;  &#9; Superscript Six</pre>
+<pre>&#x2077;  &#9; &amp;#x2077;  &#9; Superscript Seven</pre>
+<pre>&#x2078;  &#9; &amp;#x2078;  &#9; Superscript Eight</pre>
+<pre>&#x2079;  &#9; &amp;#x2079;  &#9; Superscript Nine</pre>
+<pre>&#x1D43;  &#9; &amp;#x1D43;  &#9; Superscript a</pre>
+<pre>&#x1D47;  &#9; &amp;#x1D47;  &#9; Superscript b</pre>
+<pre>&#x1D9C;  &#9; &amp;#x1D9C;  &#9; Superscript c</pre>
+<pre>&#x1D48;  &#9; &amp;#x1D48;  &#9; Superscript d</pre>
+<pre>&#x1D49;  &#9; &amp;#x1D49;  &#9; Superscript e</pre>
+<pre>&#x1DA0;  &#9; &amp;#x1DA0;  &#9; Superscript f</pre>
+<pre>&#x1D4D;  &#9; &amp;#x1D4D;  &#9; Superscript g</pre>
+<pre>&#x02B0;  &#9; &amp;#x02B0;  &#9; Superscript h</pre>
+<pre>&#x2071;  &#9; &amp;#x2071;  &#9; Superscript i</pre>
+<pre>&#x02B2;  &#9; &amp;#x02B2;  &#9; Superscript j</pre>
+<pre>&#x1D4F;  &#9; &amp;#x1D4F;  &#9; Superscript k</pre>
+<pre>&#x02E1;  &#9; &amp;#x02E1;  &#9; Superscript l</pre>
+<pre>&#x1D50;  &#9; &amp;#x1D50;  &#9; Superscript m</pre>
+<pre>&#x207F;  &#9; &amp;#x207F;  &#9; Superscript n</pre>
+<pre>&#x1D52;  &#9; &amp;#x1D52;  &#9; Superscript o</pre>
+<pre>&#x1D56;  &#9; &amp;#x1D56;  &#9; Superscript p</pre>
+<pre>&#x02B3;  &#9; &amp;#x02B3;  &#9; Superscript r</pre>
+<pre>&#x02E2;  &#9; &amp;#x02E2;  &#9; Superscript s</pre>
+<pre>&#x1D57;  &#9; &amp;#x1D57;  &#9; Superscript t</pre>
+<pre>&#x1D58;  &#9; &amp;#x1D58;  &#9; Superscript u</pre>
+<pre>&#x1D5B;  &#9; &amp;#x1D5B;  &#9; Superscript v</pre>
+<pre>&#x02B7;  &#9; &amp;#x02B7;  &#9; Superscript w</pre>
+<pre>&#x02E3;  &#9; &amp;#x02E3;  &#9; Superscript x</pre>
+<pre>&#x02B8;  &#9; &amp;#x02B8;  &#9; Superscript y</pre>
+<pre>&#x1DBB;  &#9; &amp;#x1DBB;  &#9; Superscript z</pre>
+<pre>&#x207A;  &#9; &amp;#x207A;  &#9; Superscript Plus</pre>
+<pre>&#x207B;  &#9; &amp;#x207B;  &#9; Superscript Minus</pre>
+<pre>&#x207C;  &#9; &amp;#x207C;  &#9; Superscript Equals</pre>
+<pre>&#x207D;  &#9; &amp;#x207D;  &#9; Superscript Left Parenthesis</pre>
+<pre>&#x207E;  &#9; &amp;#x207E;  &#9; Superscript Right Parenthesis</pre>
+  </details>
+
 </article>
 
 
-<!-- Суррогатная пара -->
+<!-- Подстрочные символы (subscript) -->
 <article class="article">
-  <div class="anchor" id="sur"></div>
-  <h2>Суррогатная пара</h2>
-  <p>Суррогатная пара записывается при помощи кодировки UTF-16. Первый (высокий) суррогат это 16-битовое значение кода в диапазоне от D800 до DBFF. Второй (низкий) суррогат это 16-битовое значение кода в диапазоне от DC00 до DFFF. С помощью суррогатного механизма UTF-16 может поддерживать все 1 114 112 символов Юникода.</p>
-</article>
+  <div class="anchor" id="sub"></div>
+  <h2>Подстрочные символы (subscript)</h2>
 
+  <p>
+    Нажмите на символ чтобы скопировать его в буфер обмена
+  </p>
+  <p>
+    <div class="copy-to-clipboard">&#x2080;</div>
+    <div class="copy-to-clipboard">&#x2081;</div>
+    <div class="copy-to-clipboard">&#x2082;</div>
+    <div class="copy-to-clipboard">&#x2083;</div>
+    <div class="copy-to-clipboard">&#x2084;</div>
+    <div class="copy-to-clipboard">&#x2085;</div>
+    <div class="copy-to-clipboard">&#x2086;</div>
+    <div class="copy-to-clipboard">&#x2087;</div>
+    <div class="copy-to-clipboard">&#x2088;</div>
+    <div class="copy-to-clipboard">&#x2089;</div>
+    <div class="copy-to-clipboard">&#x2090;</div>
+    <div class="copy-to-clipboard">&#x2091;</div>
+    <div class="copy-to-clipboard">&#x2095;</div>
+    <div class="copy-to-clipboard">&#x1D62;</div>
+    <div class="copy-to-clipboard">&#x2096;</div>
+    <div class="copy-to-clipboard">&#x2097;</div>
+    <div class="copy-to-clipboard">&#x2098;</div>
+    <div class="copy-to-clipboard">&#x2099;</div>
+    <div class="copy-to-clipboard">&#x2092;</div>
+    <div class="copy-to-clipboard">&#x209A;</div>
+    <div class="copy-to-clipboard">&#x209B;</div>
+    <div class="copy-to-clipboard">&#x209C;</div>
+    <div class="copy-to-clipboard">&#x2093;</div>
+    <div class="copy-to-clipboard">&#x208A;</div>
+    <div class="copy-to-clipboard">&#x208B;</div>
+    <div class="copy-to-clipboard">&#x208C;</div>
+    <div class="copy-to-clipboard">&#x208D;</div>
+    <div class="copy-to-clipboard">&#x208E;</div>
+  </p>
 
-<!-- UTF-8, UTF-16, UTF-32 -->
-<article class="article">
-  <div class="anchor" id="utf"></div>
-  <h2>UTF-8, UTF-16, UTF-32</h2>
-
-  <p>Существует три основных схемы Юникод для кодирования символов: UTF-8, UTF-16 и UTF-32. UTF означает Unicode Transformation Format. Числа, которые идут за UTF, означают размер единиц (в байтах), используемых для кодирования.</p>
-  <ol>
-    <li>
-      <h3>UTF-8</h3>
-      <p>UTF-8 использует 8-битовую кодовую единицу переменной ширины. UTF-8 использует от 1 до 6 байт для кодирования символа; она может использовать меньше, столько же или больше байт, чем UTF-16 для кодирования одного и того же символа. В windows-1251, каждый код от 0 до 127 (U+0000 to U+0127) хранится в одном байте. Только кодовые знаки от 128 (U+0128) и выше хранятся с использованием от 2 до 6 байт.</p>
-    </li>
-    <li>
-      <h3>UTF-16</h3>
-      <p>UTF-16 использует одну 16-битовую кодовую единицу фиксированной ширины. Он сравнительно компактен и все наиболее часто используемые символы могут быть закодированы с помощью одной 16-битовой кодовой единицы. Другие символы могут быть доступны при использовании пар 16-битовых кодовых единиц.</p>
-    </li>
-    <li>
-      <h3>UTF-32</h3>
-      <p>UTF-32 требуется 4 байта для кодирования любого символа. В большинстве случаев документ, закодированный с помощью UTF-32, будет примерно в два раза больше, чем такой же документ, закодированный с помощью UTF-16. Каждый символ в нем кодируется с помощью одной 32-битовой единицы кодирования фиксированной ширины. Вы можете использовать UTF-32, если вы не ограничены в дисковом пространстве и хотите использовать одну кодовую единицу для каждого символа.</p>
-    </li>
-  </ol>
-  <p>Все три формы кодирования могут кодировать одни и те же символы и могут быть переведены из одной в другую без потери данных.</p>
+  <details>
+    <summary>Подстрочные символы (subscript)</summary>
+<pre>&#x2080;  &#9; &amp;#x2080;  &#9; Subscript Zero</pre>
+<pre>&#x2081;  &#9; &amp;#x2081;  &#9; Subscript One</pre>
+<pre>&#x2082;  &#9; &amp;#x2082;  &#9; Subscript Two</pre>
+<pre>&#x2083;  &#9; &amp;#x2083;  &#9; Subscript Three</pre>
+<pre>&#x2084;  &#9; &amp;#x2084;  &#9; Subscript Four</pre>
+<pre>&#x2085;  &#9; &amp;#x2085;  &#9; Subscript Five</pre>
+<pre>&#x2086;  &#9; &amp;#x2086;  &#9; Subscript Six</pre>
+<pre>&#x2087;  &#9; &amp;#x2087;  &#9; Subscript Seven</pre>
+<pre>&#x2088;  &#9; &amp;#x2088;  &#9; Subscript Eight</pre>
+<pre>&#x2089;  &#9; &amp;#x2089;  &#9; Subscript Nine</pre>
+<pre>&#x2090;  &#9; &amp;#x2090;  &#9; Subscript a</pre>
+<pre>&#x2091;  &#9; &amp;#x2091;  &#9; Subscript e</pre>
+<pre>&#x2095;  &#9; &amp;#x2095;  &#9; Subscript h</pre>
+<pre>&#x1D62;  &#9; &amp;#x1D62;  &#9; Subscript i</pre>
+<pre>&#x2096;  &#9; &amp;#x2096;  &#9; Subscript k</pre>
+<pre>&#x2097;  &#9; &amp;#x2097;  &#9; Subscript l</pre>
+<pre>&#x2098;  &#9; &amp;#x2098;  &#9; Subscript m</pre>
+<pre>&#x2099;  &#9; &amp;#x2099;  &#9; Subscript n</pre>
+<pre>&#x2092;  &#9; &amp;#x2092;  &#9; Subscript o</pre>
+<pre>&#x209A;  &#9; &amp;#x209A;  &#9; Subscript p</pre>
+<pre>&#x209B;  &#9; &amp;#x209B;  &#9; Subscript s</pre>
+<pre>&#x209C;  &#9; &amp;#x209C;  &#9; Subscript t</pre>
+<pre>&#x2093;  &#9; &amp;#x2093;  &#9; Subscript x</pre>
+<pre>&#x208A;  &#9; &amp;#x208A;  &#9; Subscript Plus</pre>
+<pre>&#x208B;  &#9; &amp;#x208B;  &#9; Subscript Minus</pre>
+<pre>&#x208C;  &#9; &amp;#x208C;  &#9; Subscript Equals</pre>
+<pre>&#x208D;  &#9; &amp;#x208D;  &#9; Subscript Left Parenthesis</pre>
+<pre>&#x208E;  &#9; &amp;#x208E;  &#9; Subrscript Right Parenthesis</pre>
+  </details>
 </article>
 
 
@@ -120,87 +245,35 @@
 </article>
 
 
-<!-- Надстрочные символы (superscript) -->
+<!-- about -->
 <article class="article">
-  <div class="anchor" id="sup"></div>
-  <h2>Надстрочные символы (superscript)</h2>
+  <div class="anchor" id="about"></div>
+  <h2>about</h2>
 
-  <pre>&#x2070;  &#9; &amp;#x2070;  &#9; Superscript Zero</pre>
-  <pre>&#xB9;    &#9; &amp;#xB9;    &#9; Superscript One</pre>
-  <pre>&#xB2;    &#9; &amp;#xB2;    &#9; Superscript Two</pre>
-  <pre>&#xB3;    &#9; &amp;#xB3;    &#9; Superscript Three</pre>
-  <pre>&#x2074;  &#9; &amp;#x2074;  &#9; Superscript Four</pre>
-  <pre>&#x2075;  &#9; &amp;#x2075;  &#9; Superscript Five</pre>
-  <pre>&#x2076;  &#9; &amp;#x2076;  &#9; Superscript Six</pre>
-  <pre>&#x2077;  &#9; &amp;#x2077;  &#9; Superscript Seven</pre>
-  <pre>&#x2078;  &#9; &amp;#x2078;  &#9; Superscript Eight</pre>
-  <pre>&#x2079;  &#9; &amp;#x2079;  &#9; Superscript Nine</pre>
-  <pre>&#x1D43;  &#9; &amp;#x1D43;  &#9; Superscript a</pre>
-  <pre>&#x1D47;  &#9; &amp;#x1D47;  &#9; Superscript b</pre>
-  <pre>&#x1D9C;  &#9; &amp;#x1D9C;  &#9; Superscript c</pre>
-  <pre>&#x1D48;  &#9; &amp;#x1D48;  &#9; Superscript d</pre>
-  <pre>&#x1D49;  &#9; &amp;#x1D49;  &#9; Superscript e</pre>
-  <pre>&#x1DA0;  &#9; &amp;#x1DA0;  &#9; Superscript f</pre>
-  <pre>&#x1D4D;  &#9; &amp;#x1D4D;  &#9; Superscript g</pre>
-  <pre>&#x02B0;  &#9; &amp;#x02B0;  &#9; Superscript h</pre>
-  <pre>&#x2071;  &#9; &amp;#x2071;  &#9; Superscript i</pre>
-  <pre>&#x02B2;  &#9; &amp;#x02B2;  &#9; Superscript j</pre>
-  <pre>&#x1D4F;  &#9; &amp;#x1D4F;  &#9; Superscript k</pre>
-  <pre>&#x02E1;  &#9; &amp;#x02E1;  &#9; Superscript l</pre>
-  <pre>&#x1D50;  &#9; &amp;#x1D50;  &#9; Superscript m</pre>
-  <pre>&#x207F;  &#9; &amp;#x207F;  &#9; Superscript n</pre>
-  <pre>&#x1D52;  &#9; &amp;#x1D52;  &#9; Superscript o</pre>
-  <pre>&#x1D56;  &#9; &amp;#x1D56;  &#9; Superscript p</pre>
-  <pre>&#x02B3;  &#9; &amp;#x02B3;  &#9; Superscript r</pre>
-  <pre>&#x02E2;  &#9; &amp;#x02E2;  &#9; Superscript s</pre>
-  <pre>&#x1D57;  &#9; &amp;#x1D57;  &#9; Superscript t</pre>
-  <pre>&#x1D58;  &#9; &amp;#x1D58;  &#9; Superscript u</pre>
-  <pre>&#x1D5B;  &#9; &amp;#x1D5B;  &#9; Superscript v</pre>
-  <pre>&#x02B7;  &#9; &amp;#x02B7;  &#9; Superscript w</pre>
-  <pre>&#x02E3;  &#9; &amp;#x02E3;  &#9; Superscript x</pre>
-  <pre>&#x02B8;  &#9; &amp;#x02B8;  &#9; Superscript y</pre>
-  <pre>&#x1DBB;  &#9; &amp;#x1DBB;  &#9; Superscript z</pre>
-  <pre>&#x207A;  &#9; &amp;#x207A;  &#9; Superscript Plus</pre>
-  <pre>&#x207B;  &#9; &amp;#x207B;  &#9; Superscript Minus</pre>
-  <pre>&#x207C;  &#9; &amp;#x207C;  &#9; Superscript Equals</pre>
-  <pre>&#x207D;  &#9; &amp;#x207D;  &#9; Superscript Left Parenthesis</pre>
-  <pre>&#x207E;  &#9; &amp;#x207E;  &#9; Superscript Right Parenthesis</pre>
+  <h3>Стандарт Юникод</h3>
+  <p>Стандарт Юникод был предложен в 1991 году. Сейчас он использует кодировку UTF-16, где кодируется 2<sup>16</sup> символов со значениями кодов от 0 до 65535. Это базовая многоязычная плоскость (BMP - base multilanguage plane).</p>
+  <p>Стандарт Юникода установил 16 дополнительных "плоскостей" символов, каждый из которых имеет тот же размер, что и BMP. Это дает Юникоду возможность определить 1,114,112 символов (т. е. 2<sup>16</sup> * 17 символов) в диапазоне кодовых точек от U+0000 до U+10FFFF. Большинству кодовых точек за пределами BMP еще не назначены символы.</p>
 
+  <h3>Суррогатная пара</h3>
+  <p>Суррогатная пара записывается при помощи кодировки UTF-16. Первый (высокий) суррогат это 16-битовое значение кода в диапазоне от D800 до DBFF. Второй (низкий) суррогат это 16-битовое значение кода в диапазоне от DC00 до DFFF. С помощью суррогатного механизма UTF-16 может поддерживать все 1 114 112 символов Юникода.</p>
+
+  <h3>UTF-8, UTF-16, UTF-32</h3>
+
+  <p>Существует три основных схемы Юникод для кодирования символов: UTF-8, UTF-16 и UTF-32. UTF означает Unicode Transformation Format. Числа, которые идут за UTF, означают размер единиц (в байтах), используемых для кодирования.</p>
+  <ol>
+    <li>
+      <h3>UTF-8</h3>
+      <p>UTF-8 использует 8-битовую кодовую единицу переменной ширины. UTF-8 использует от 1 до 6 байт для кодирования символа; она может использовать меньше, столько же или больше байт, чем UTF-16 для кодирования одного и того же символа. В windows-1251, каждый код от 0 до 127 (U+0000 to U+0127) хранится в одном байте. Только кодовые знаки от 128 (U+0128) и выше хранятся с использованием от 2 до 6 байт.</p>
+    </li>
+    <li>
+      <h3>UTF-16</h3>
+      <p>UTF-16 использует одну 16-битовую кодовую единицу фиксированной ширины. Он сравнительно компактен и все наиболее часто используемые символы могут быть закодированы с помощью одной 16-битовой кодовой единицы. Другие символы могут быть доступны при использовании пар 16-битовых кодовых единиц.</p>
+    </li>
+    <li>
+      <h3>UTF-32</h3>
+      <p>UTF-32 требуется 4 байта для кодирования любого символа. В большинстве случаев документ, закодированный с помощью UTF-32, будет примерно в два раза больше, чем такой же документ, закодированный с помощью UTF-16. Каждый символ в нем кодируется с помощью одной 32-битовой единицы кодирования фиксированной ширины. Вы можете использовать UTF-32, если вы не ограничены в дисковом пространстве и хотите использовать одну кодовую единицу для каждого символа.</p>
+    </li>
+  </ol>
+  <p>Все три формы кодирования могут кодировать одни и те же символы и могут быть переведены из одной в другую без потери данных.</p>
 </article>
 
-
-<!-- Подстрочные символы (subscript) -->
-<article class="article">
-  <div class="anchor" id="sub"></div>
-  <h2>Подстрочные символы (subscript)</h2>
-
-  <pre>&#x2080;  &#9; &amp;#x2080;  &#9; Subscript Zero</pre>
-  <pre>&#x2081;  &#9; &amp;#x2081;  &#9; Subscript One</pre>
-  <pre>&#x2082;  &#9; &amp;#x2082;  &#9; Subscript Two</pre>
-  <pre>&#x2083;  &#9; &amp;#x2083;  &#9; Subscript Three</pre>
-  <pre>&#x2084;  &#9; &amp;#x2084;  &#9; Subscript Four</pre>
-  <pre>&#x2085;  &#9; &amp;#x2085;  &#9; Subscript Five</pre>
-  <pre>&#x2086;  &#9; &amp;#x2086;  &#9; Subscript Six</pre>
-  <pre>&#x2087;  &#9; &amp;#x2087;  &#9; Subscript Seven</pre>
-  <pre>&#x2088;  &#9; &amp;#x2088;  &#9; Subscript Eight</pre>
-  <pre>&#x2089;  &#9; &amp;#x2089;  &#9; Subscript Nine</pre>
-  <pre>&#x2090;  &#9; &amp;#x2090;  &#9; Subscript a</pre>
-  <pre>&#x2091;  &#9; &amp;#x2091;  &#9; Subscript e</pre>
-  <pre>&#x2095;  &#9; &amp;#x2095;  &#9; Subscript h</pre>
-  <pre>&#x1D62;  &#9; &amp;#x1D62;  &#9; Subscript i</pre>
-  <pre>&#x2096;  &#9; &amp;#x2096;  &#9; Subscript k</pre>
-  <pre>&#x2097;  &#9; &amp;#x2097;  &#9; Subscript l</pre>
-  <pre>&#x2098;  &#9; &amp;#x2098;  &#9; Subscript m</pre>
-  <pre>&#x2099;  &#9; &amp;#x2099;  &#9; Subscript n</pre>
-  <pre>&#x2092;  &#9; &amp;#x2092;  &#9; Subscript o</pre>
-  <pre>&#x209A;  &#9; &amp;#x209A;  &#9; Subscript p</pre>
-  <pre>&#x209B;  &#9; &amp;#x209B;  &#9; Subscript s</pre>
-  <pre>&#x209C;  &#9; &amp;#x209C;  &#9; Subscript t</pre>
-  <pre>&#x2093;  &#9; &amp;#x2093;  &#9; Subscript x</pre>
-  <pre>&#x208A;  &#9; &amp;#x208A;  &#9; Subscript Plus</pre>
-  <pre>&#x208B;  &#9; &amp;#x208B;  &#9; Subscript Minus</pre>
-  <pre>&#x208C;  &#9; &amp;#x208C;  &#9; Subscript Equals</pre>
-  <pre>&#x208D;  &#9; &amp;#x208D;  &#9; Subscript Left Parenthesis</pre>
-  <pre>&#x208E;  &#9; &amp;#x208E;  &#9; Subrscript Right Parenthesis</pre>
-
-</article>
